k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-go-app-deployment
  labels:
    app: k8s-go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-go-app
  template:
    metadata:
      labels:
        app: k8s-go-app
    spec:
      containers:
      - name: k8s-go-app
        image: surajithk/k8s-go-app:latest  # Update with your Docker Hub username
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
