k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-go-app-service
  labels:
    app: k8s-go-app
spec:
  type: LoadBalancer  # Use NodePort for local clusters like minikube
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: k8s-go-app
